clusters/homelab/my-applications/openwebui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openwebui
spec:
  type: ClusterIP
  selector:
    app: openwebui
  ports:
    - name: web
      port: 8080
      protocol: TCP
      targetPort: web
